UI file initial commit

--- a/ui_www/index.html
+++ b/ui_www/index.html
@@ -48,10 +48,9 @@
 <script src="justguage/raphael-2.1.4.min.js"></script>
 <script src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"></script>
 <script src="js/sevenSeg.js"></script>
-
-
-<link href="rslider/roundslider.min.css" rel="stylesheet" />
-<script src="rslider/roundslider.min.js"></script>
+<script src="jqueryupload/vendor/jquery.ui.widget.js"></script>
+<script src="jqueryupload/jquery.iframe-transport.js"></script>
+<script src="jqueryupload/jquery.fileupload.js"></script>
 
  <!--  Ajax Communication Library   -->
  <script src="ajaxFuncs/ajaxComm.js"></script>
@@ -78,8 +77,7 @@
  <script src="js/views.app.js"></script>
  <script src="js/mqttInteractions.js"></script>
 <script src="cguage/gauge.min.js"></script>
-<script src="treeviz/index.js"></script>
- <link rel="stylesheet" href="css/trafficlight.css"> 
+ <link rel="stylesheet" href="css/trafficlight.css">
  <!-- link rel="stylesheet" href="css/guage.css"  -->
   
 </head>
