--- a/ui_www/index.html
+++ b/ui_www/index.html
@@ -89,9 +89,9 @@
 	<div class="container" id="mcontent"></div>
   
  	<div id="appmodal" class="modal fade" role="dialog">
-  		<div class="modal-dialog">
+		<div class="modal-dialog  modal-sm">
     		<!-- Modal content-->
-    		<div class="modal-content">
+			<div class="modal-content" id="modalcontent">
       			<div class="modal-header" id="modalheader">
         			<button type="button" class="close" data-dismiss="modal">&times;</button>
         			<h4 class="modal-title">Modal Header</h4>
