More changes to get application running.

--- a/ui_www/index.html
+++ b/ui_www/index.html
@@ -131,8 +131,10 @@
  	<!--  Fire off JS function upon load -->
 	<script>
 		appInit();
+
 	</script>
-	
-	
+	<script src="js/filefuncs.js"></script>
+
+
 </body>
 </html>
